Support of verify configuration